--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jose": "^6.1.3",
     "lucide-react": "^0.556.0",
     "next": "16.0.8",
+    "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "react": "19.2.1",
     "react-day-picker": "^9.13.0",
@@ -50,6 +51,7 @@
     "react-hook-form": "^7.69.0",
     "react-resizable-panels": "^4.2.0",
     "sharp": "^0.34.5",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.4"
   },
