--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-email/components": "^1.0.7",
+    "@react-email/render": "^2.0.4",
+    "@sendgrid/mail": "^8.1.6",
     "axios": "^1.13.4",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
@@ -46,9 +49,11 @@
     "next": "16.0.8",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
+    "prettier": "^3.8.1",
     "react": "19.2.1",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.1",
+    "react-email": "^5.2.8",
     "react-hook-form": "^7.69.0",
     "react-resizable-panels": "^4.2.0",
     "sharp": "^0.34.5",
